tests/ui/zeroize/deprecated_drop.stderr
error: `Zeroize(drop)` is deprecated, use `ZeroizeOnDrop` instead
 --> tests/ui/zeroize/deprecated_drop.rs:7:24
  |
7 | #[derive_where(Zeroize(drop))]
  |                        ^^^^
